--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,21 @@
-libmeegotouch (0.20.42~1) unstable; urgency=low
+libmeegotouch (0.20.42-1) unstable; urgency=low
 
-  * [unreleased]
-  * Fixes: NB#187279 - Overriding the default debug level is insufficiently documented
+  * Fixes: NB#190989 - Tap opens two message boxes in Speech Bubble widget
+  * Fixes: NB#188043 - Inconsistent Property names in MAdvancedListItem and MDetailedListItem
+  * Fixes: NB#191606 - Valgrind - memory leak in mabstractitemmodel
+  * Fixes: NB#191178 - MList : indexVisible() always returns false
+  * Fixes: NB#186723 - Scroll indicator doesn't appear in scrollable views
+  * Fixes: NB#188298 - MApplicationWindow should provide isChained() and parentWindowId() APIs
+  * Fixes: NB#190336 - Don't create a glWidget for boosted apps on startup
+  * Fixes: NB#190116 - enable switching to software rendering when minimizing the app
+  * Fixes: NB#191519 - MListItemView class is not exported
+  * Fixes: NB#188672 - Not able to get default Normal text once switched to Bold text
+  * Fixes: NB#190336 - boosted applications use more SGX memory pages than non-boosted ones
+  * Fixes: NB#190226 - MWidget::isOnDisplay() returns false even though application is visible on switcher
+  * Fixes: NB#191067 - MButton: Unable to disable the icon.
+  * Fixes: NB#190565 - displayEntered can be received by application page without visible window
 
- -- Jorgen Scheibengruber <jorgen.scheibengruber@nokia.com>  Fri, 10 Sep 2010 15:37:26 +0300
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Tue, 15 Sep 2010 12:28:00 +0300
 
 libmeegotouch (0.20.41-1) unstable; urgency=low
 
