Changes: Preparing unreleased
RevBy: TrustMe

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.43~1) unstable; urgency=low
+
+  * unreleased
+
+-- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Tue, 15 Sep 2010 12:35:00 +0300
+
 libmeegotouch (0.20.42-1) unstable; urgency=low
 
   * Fixes: NB#190989 - Tap opens two message boxes in Speech Bubble widget
