--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.43~1) unstable; urgency=low
+
+  * Preparing 0.20.43
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Tue, 15 Sep 2010 15:47:00 +0300
+
 libmeegotouch (0.20.42-2) unstable; urgency=low
 
   * Revert "Fixes NB#191067 - MButton: Unable to disable the icon."
