Changes: Preparing next release
RevBy: TrustMe

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.44~1) unstable; urgency=low
+
+  * Unrleased
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Mon, 20 Sep 2010 13:12:00 +0300
+
 libmeegotouch (0.20.43-2) unstable; urgency=low
 
   * Fixes the ABI/API break and deprecates the default MStyleSheetSelector constructor.
