Changes: add table of contents to i18n doxygen documentation
RevBy: Holger Schröder, Berthold Krevert

--- a/doc/src/i18n.dox
+++ b/doc/src/i18n.dox
@@ -1,5 +1,7 @@
 /*! \page  i18n  Internationalisation Guidelines
 
+\htmlinclude i18n-toc.html
+
 \section  intro  Introduction
 
 This document provides guidelines on developing locale-aware
