--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.46~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Sun, 03 Oct 2010 11:21:00 +0300
+
 libmeegotouch (0.20.45-1) unstable; urgency=low
 
   * Fixes: BMC#6871 - libmeegotouch: revise profile for russellville in devices.conf
