--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmeegotouch (0.20.47~1) unstable; urgency=low
+
+  * Unreleased
+
+ -- Natalia Dobrovolskaya <natalia.dobrovolskaya@nokia.com>  Tue, 05 Oct 2010 15:27:00 +0300
+
 libmeegotouch (0.20.46-1) unstable; urgency=low
 
   * Fixes: NB#196090 -  MButton - tap&hold is not working as expected
